FEAT: add description about state_dict()

--- a/Lecture-AI_programming/week09.ipynb
+++ b/Lecture-AI_programming/week09.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOg4/sqdQTwBUmpgL3kAVlR",
+      "authorship_tag": "ABX9TyMXCtZR3ftT/f/eksIma0EY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,30 +29,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Week09"
+        "# Week09\n",
+        "## 모델 저장하기"
       ],
       "metadata": {
         "id": "XNdqc3lr7vzj"
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "v-585wAP7sH-"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "torch.nn.Module 객체의 state_dict() 메서드는\n",
+        "## `state_dict()`\n",
+        "`torch.nn.Module` 객체의 `state_dict()` 메서드.\n",
         "\n",
-        "- 모델의 학습 가능한 매개변수(가중치와 바이어스)의 상태와\n",
+        "- 모델의 학습 가능한 parameters의 상태와\n",
         "- 버퍼(예: BatchNorm의 running mean과 variance 등)의 상태를 저장하는\n",
         "- collections.OrderedDict 객체를 반환.\n",
-        "- 반환된 객체는 모델의 현재 상태를 나타내며, 저장 및 로드가 가능함."
+        "- 반환된 객체는 모델의 현재 상태를 나타내며, 저장 및 로드가 가능."
       ],
       "metadata": {
         "id": "XBeRoZTO7vhe"
@@ -61,23 +54,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Serialization: 직렬화로 저장.\n",
-        "개체 직렬화\n",
-        "key: value 형태로"
-      ],
-      "metadata": {
-        "id": "z0njj61E8RPW"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "1. OrderedDict 형태:\n",
-        "- state_dict()는 attribute 이름을 키로 하고,\n",
+        "- attribute 이름을 키로 하고,\n",
         "- 그에 대응하는 torch.Tensor를 값으로 갖는\n",
-        "- collections.OrderedDict 객체를 반환.\n",
+        "- `collections.OrderedDict` 객체를 반환.\n",
         "2. 학습 가능한 매개변수:\n",
-        "- state_dict()는 torch.nn.Parameter 객체로 정의된 모든 학습 가능한 attributes를 포함.\n",
+        "- `torch.nn.Parameter` 객체로 정의된 모든 학습 가능한 attributes를 포함.\n",
         "3. 버퍼:\n",
         "- 모델에 포함된 모든 버퍼(예: BatchNorm 계층의 running mean과 variance)도 포함."
       ],
@@ -88,10 +70,36 @@
     {
       "cell_type": "markdown",
       "source": [
-        "OrderedDict: 순서가 정의된 딕셔너리 형태."
+        "- Serialization: 개체를 key: value 형태로 하여 직렬화로 저장.\n",
+        "- OrderedDict: 순서가 정의된 딕셔너리 형태.\n",
+        "\n"
       ],
       "metadata": {
-        "id": "XQpZBXIK-mn5"
+        "id": "z0njj61E8RPW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## parameters\n",
+        "`state_dict(desitnation=None, prefix='', keep_vars=False)`\n",
+        "### keep_vars\n",
+        "buffers와 parameters의 값만을 추출할지 결정\n",
+        "- 저장의 용도로는 keep_vars=False를 사용하는 게 좋음.\n",
+        "\n",
+        "**keep_vars=True인 경우**\n",
+        "- value가 parameter인 경우엔 Parameter 로 얻어짐.\n",
+        "- value가 buffer인 경우엔 Tensor 로 얻어짐.\n",
+        "- 메모리 사용량이 커지고, 매우 느리고 복잡한 동작 발생.\n",
+        "\n",
+        "**장점**\n",
+        "- 모델 디버깅: 모델 상태를 조사하고 특정 매개 변수나 버퍼의 값을 변경해야 하는 경우 유용\n",
+        "- 모델 커스터마이징: 모델을 불러온 후 특정 매개 변수나 버퍼의 값을 변경해야 하는 경우 유용\n",
+        "- 모델 저장 및 불러오기 확장: 모델 저장 및 불러오기 프로세스를 확장하고 추가적인 정보를 저장해야 하는 경우 유용\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wTj2Ev9SF9D4"
       }
     },
     {
@@ -107,14 +115,6 @@
         "        super(MyModel, self).__init__()\n",
         "        self.linear = nn.Linear(10, 5)\n",
         "        self.bn = nn.BatchNorm1d(5)\n",
-        "        # self.sub = nn.Sequential(\n",
-        "        #     OrderedDict({\n",
-        "        #         'ds00_layer': nn.Linear(5,5),\n",
-        "        #         'ds00_bn':nn.BatchNorm1d(5),\n",
-        "        #         'ds00_act': nn.ReLU(),\n",
-        "        #         'ds01_layer': nn.Linear(5,5),\n",
-        "        #     })\n",
-        "        # )\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = self.linear(x)\n",
@@ -136,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k9MhjrFL_4B4",
-        "outputId": "78c7ce0b-cf01-429d-e113-dc613e130a41"
+        "outputId": "6d1a8243-9f63-4d25-fdfa-9fc1e653d610"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,6 +156,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### `linear`: `nn.Linear`\n",
+        "- `linear.weight`: weight parameter\n",
+        "- `linear.bias`: bias parameter\n",
+        "\n",
+        "### `bn`: `nn.BatchNorm1d`\n",
+        "- `bn.weight`: weight parameter\n",
+        "- `bn.bias`: bias parameter\n",
+        "- `bn.running_mean`: running mean buffer\n",
+        "- `bn.running_var`: running variance buffer\n",
+        "- `bn.num_batches_tracked`: 배치의 수 추적 buffer"
+      ],
+      "metadata": {
+        "id": "K0ICc1U1T3XW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 모델의 state_dict 가져오기\n",
@@ -170,9 +188,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hwrwk23VE4m1",
-        "outputId": "28f90b3e-9a76-4bbd-eecc-97a177a6d92d"
+        "outputId": "44a8820b-de62-4f8c-d70e-61c7199981c6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,41 +210,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "메서드 parameters: state_dict(desitnation=None, prefix='', keep_vars=False)\n",
-        "keep_vars 는 기본값이 False로 buffers와 parameters 의 값만을 추출할지를 결정\n",
-        "keep_vars=True 인 경우, 값 대신 tensor객체로 데이터 버퍼를 가지고 있는 dictionary가 반환됨.\n",
-        "value 가 파라메터인 경우엔 Parameter 로 얻어지고,\n",
-        "value 가 버퍼인 경우엔 Tensor 로 얻어짐.\n",
-        "keep_vars=True 인 경우, 메모리 사용량이 커지고, 매우 느리고 복잡한 동작이 이루어지지만. 다음의 장점을 가짐.\n",
-        "모델 디버깅: 모델 상태를 조사하고 특정 매개 변수나 버퍼의 값을 변경해야 하는 경우 유용\n",
-        "모델 커스터마이징: 모델을 불러온 후 특정 매개 변수나 버퍼의 값을 변경해야 하는 경우 유용\n",
-        "모델 저장 및 불러오기 확장: 모델 저장 및 불러오기 프로세스를 확장하고 추가적인 정보를 저장해야 하는 경우 유용\n",
-        "하지만, PyTorch의 버전이 정확히 맞아야만 동작할 수 있는 등의 제한점을 가짐.\n",
-        "저장의 용도로는 keep_vars=False를 사용하는 게 좋음.\n"
-      ],
-      "metadata": {
-        "id": "wTj2Ev9SF9D4"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "linear.weight: nn.Linear 계층의 가중치 파라미터\n",
-        "linear.bias: nn.Linear 계층의 바이어스 파라미터\n",
-        "bn.weight: nn.BatchNorm1d 계층의 가중치 파라미터\n",
-        "bn.bias: nn.BatchNorm1d 계층의 바이어스 파라미터\n",
-        "bn.running_mean: nn.BatchNorm1d 계층의 running mean 버퍼\n",
-        "bn.running_var: nn.BatchNorm1d 계층의 running variance 버퍼\n",
-        "bn.num_batches_tracked: nn.BatchNorm1d 계층에서 배치의 수를 추적하는 버퍼"
-      ],
-      "metadata": {
-        "id": "rV27nStUHj2G"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "모델 저장\n",
+        "## 모델 저장\n",
         "\n",
         "state_dict를 파일에 저장하여 나중에 모델을 복원할 수 있음."
       ],
@@ -237,7 +221,6 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
         "torch.save(model.state_dict(), 'model_state.pth')"
       ],
       "metadata": {
@@ -249,7 +232,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "모델 로드:\n",
+        "## 모델 로드\n",
         "\n",
         "저장된 state_dict를 로드하여 모델을 복원."
       ],
@@ -261,19 +244,33 @@
       "cell_type": "code",
       "source": [
         "model = MyModel()\n",
-        "model.load_state_dict(torch.load('model_state.pth'))\n",
-        "model.eval() # 평가 모드로 전환 (선택 사항)`"
+        "model.load_state_dict(torch.load('model_state.pth'))"
       ],
       "metadata": {
-        "id": "MHmK38jSHt5Z"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MHmK38jSHt5Z",
+        "outputId": "3d9e0635-f063-47b4-88bc-b97677346fbe"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "파라미터 업데이트:\n",
+        "### 파라미터 업데이트\n",
         "\n",
         "state_dict를 사용하여 모델의 특정 파라미터를 업데이트할 수 있음."
       ],
@@ -288,10 +285,34 @@
         "model.load_state_dict(state_dict)"
       ],
       "metadata": {
-        "id": "cw6mX_fEHxI5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cw6mX_fEHxI5",
+        "outputId": "ea35de94-2f5e-440c-edc3-343c9c67d10c"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<hr>"
+      ],
+      "metadata": {
+        "id": "xto6bpx1YIcb"
+      }
     },
     {
       "cell_type": "markdown",
@@ -424,9 +445,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ult44kEoL3tH",
-        "outputId": "b9115121-2a82-4e33-854f-67663355d25a"
+        "outputId": "57b16cef-6041-4ca8-e7c5-691c6fd4098f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,10 +528,23 @@
         "print(torch.equal(param1, param3))  # False"
       ],
       "metadata": {
-        "id": "2t8Iu9vTVWlM"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2t8Iu9vTVWlM",
+        "outputId": "902939f1-82e2-4f7d-fd59-67ce4cb571d0"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
