--- a/Lecture-AI_programming/week09.ipynb
+++ b/Lecture-AI_programming/week09.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXCtZR3ftT/f/eksIma0EY",
+      "authorship_tag": "ABX9TyPS7QYeGUTzDYuetFhPnwyg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,102 +317,113 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Torch: Save and Load Model\n",
-        "PyTorch에서 model을 저장하는 방법은 크게 두 가지임.\n",
-        "\n",
-        "모델의 Parameters (= weights and bias)를 저장 (Structure 등은 저장되지 않음).\n",
-        "model 전체를 저장하는 방법 (Parameters와 Structure 함께)\n",
-        "일반적으로 권장되는 방법은 1번임.\n",
-        "\n",
-        "1번의 경우,\n",
-        "\n",
-        "비록 모델의 구조를 정의하고 있는 class 의 instance 코드 상에서 생성하고,\n",
-        "이 instance로 로딩을 수행해줘야 하지만,\n",
-        "해당 class의 소스를 정확히 가지고 있을 경우 PyTorch 버전 등에 상관없이\n",
-        "이전과 동일한 모델을 load를 통해 얻을 수 있음.\n",
-        "위에서 정확히 가지고 있다라는 애기는 save할 때와 load할 때의 모델 클래스의 definition이 동일해야함을 의미함."
+        "# Save and Load Model"
       ],
       "metadata": {
-        "id": "G1T65rU1JWxJ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "https://ds31x.tistory.com/263"
-      ],
-      "metadata": {
-        "id": "6vGPp_9EJZF_"
+        "id": "cKhuWei58CXt"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# 필요한 library와 모듈 import\n",
         "import torch\n",
         "from torch import nn\n",
         "from torch.nn import init\n",
-        "from collections import OrderedDict\n",
+        "from collections import OrderedDict"
+      ],
+      "metadata": {
+        "id": "zDomW-5Qu91a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
-        "# 간단한 linear regression model 정의.\n",
-        "# SimpleModel0와 SimpleModel1은\n",
-        "# 똑같은 구조이나 파라메터들의 초기값만 다름.\n",
-        "class SimpleModel0(nn.Module):\n",
+        "## 모델의 Parameters 저장\n",
+        "- Structure 등은 저장되지 않음.\n",
+        "- PyTorch 버전에 관계없이 사용 가능."
+      ],
+      "metadata": {
+        "id": "FqQj2A4boHD2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `state_dict()`\n",
+        "- 객체의 상태를 가지고 있어 상태를 저장하고 복원할 수 있음.\n",
+        "- 모델의 parameter 상태와 buffer의 상태 저장\n",
+        "- 현재 Module instance의 상태에 해당하는 OrderedDict 객체 `state_dict` 반환.\n"
+      ],
+      "metadata": {
+        "id": "a9nkpCwjoFLo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `load_state_dict(state_dict)`\n",
+        "현재 Module 인스턴스의 상태를 argument로 넘겨진 OrderedDict 객체 state_dict를 이용해 설정\n",
         "\n",
-        "  def __init__(self, n_in_f, n_out_f):\n",
+        "- missing_keys : 로드하려는 state_dict에는 있으나 load_state_dict메서드를 호출한 Module 객체에는 없는 키들.\n",
+        "- unexpected_keys : Module 객체에는 있으나 인자로 넘겨진 state_dict에는 없는 키들."
+      ],
+      "metadata": {
+        "id": "kFevbUSJsiYs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `torch.save(state_dict,'file_path') & state_dict=torch.load('file_path')`\n",
         "\n",
+        "`state_dict`객체는 torch의 `save` `load`를 이용해 파일로 저장되거나 로딩됨."
+      ],
+      "metadata": {
+        "id": "JlklNPYPuUbS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Model(nn.Module):\n",
+        "  def __init__(self, n_in_f, n_out_f, w, b):\n",
         "    super().__init__()\n",
-        "\n",
-        "\n",
         "    init_weigths = torch.ones( (n_in_f, n_out_f) )\n",
         "    init_bias = torch.zeros( (n_out_f,) )\n",
         "\n",
         "    self.l0 = nn.Linear(n_in_f, n_out_f)\n",
         "\n",
-        "    const_weight = 1.\n",
-        "    const_bias = 0.5\n",
-        "\n",
-        "    init.constant_(self.l0.weight, const_weight)\n",
+        "    init.constant_(self.l0.weight, w)\n",
         "    if self.l0.bias is not None:\n",
-        "      init.constant_(self.l0.bias, const_bias)\n",
+        "      init.constant_(self.l0.bias, b)\n",
         "\n",
         "  def forward(self, x):\n",
-        "    return self.l0(x)\n",
-        "\n",
-        "class SimpleModel1(nn.Module):\n",
-        "\n",
-        "  def __init__(self, n_in_f, n_out_f):\n",
-        "\n",
-        "    super().__init__()\n",
-        "\n",
-        "    init_weigths = torch.ones( (n_in_f, n_out_f) )\n",
-        "    init_bias = torch.zeros( (n_out_f,) )\n",
-        "\n",
-        "    self.l0 = nn.Linear(n_in_f, n_out_f)\n",
-        "\n",
-        "    const_weight = 2.\n",
-        "    const_bias = 1.5\n",
-        "\n",
-        "    init.constant_(self.l0.weight, const_weight)\n",
-        "    if self.l0.bias is not None:\n",
-        "      init.constant_(self.l0.bias, const_bias)\n",
-        "\n",
-        "  def forward(self, x):\n",
-        "    return self.l0(x)\n",
-        "\n",
-        "\n",
+        "    return self.l0(x)"
+      ],
+      "metadata": {
+        "id": "1Tpv8WqDyb9r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 모델 객체를 생성하고, 이에 대한 파라메터 확인후\n",
         "# 파라메터만 저장.\n",
-        "model = SimpleModel0(3,1)\n",
-        "print(list(model.named_parameters()))\n",
-        "torch.save(model.state_dict(), 'model_params.pth')\n",
+        "model1 = Model(3, 1, 1., 0.5)\n",
+        "print(list(model1.named_parameters()))\n",
+        "torch.save(model1.state_dict(), 'model_params.pth')\n",
         "\n",
         "# 새로운 모델 객체를 생성.\n",
         "# 해당 모델 객체는 구조는 같으나, 파라메터들의 초기값은 다름.\n",
-        "n_model = SimpleModel1(3,1)\n",
+        "model2 = Model(3, 1, 2., 1.5)\n",
         "\n",
         "print('===============')\n",
-        "for old, new in zip(model.parameters(), n_model.parameters()):\n",
+        "for old, new in zip(model1.parameters(), model2.parameters()):\n",
         "\n",
         "  if not torch.equal(old,new):\n",
         "    print('model and n_model w/ default init do not have parameters with the same values!')\n",
@@ -428,11 +439,11 @@
         "loaded_params_ordered_dict = torch.load('model_params.pth')\n",
         "print(f'{type(loaded_params_ordered_dict)=}') # collections.OredredDict\n",
         "\n",
-        "ret_v = n_model.load_state_dict(loaded_params_ordered_dict)\n",
+        "ret_v = model2.load_state_dict(loaded_params_ordered_dict)\n",
         "print(f'{type(ret_v)}: {ret_v}')\n",
         "\n",
         "print('===============')\n",
-        "for old, new in zip(model.parameters(), n_model.parameters()):\n",
+        "for old, new in zip(model1.parameters(), model2.parameters()):\n",
         "\n",
         "  if not torch.equal(old,new):\n",
         "    print('model and n_model do not have parameters with the same values!')\n",
@@ -445,7 +456,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ult44kEoL3tH",
-        "outputId": "57b16cef-6041-4ca8-e7c5-691c6fd4098f"
+        "outputId": "53d0805b-840d-4cfa-8c38-904b7e17d3d6"
       },
       "execution_count": null,
       "outputs": [
@@ -470,11 +481,65 @@
     {
       "cell_type": "markdown",
       "source": [
-        "버전이 크게 바뀔 경우 안 될 확률이 매우 높음.\n",
-        "주기적으로 읽어서 최신 버전으로 다시 저장 필요."
+        "\n",
+        "## model 전체 저장\n",
+        "- Parameters와 Structure 함께 저장\n",
+        "- pickle에 의존하여 인스턴스를 직렬화하므로 모델 클래스 정의가 필요함.\n",
+        "- 버전이 크게 바뀔 경우 안 될 확률이 매우 높으므로 주기적으로 최신 버전으로 다시 저장 필요."
       ],
       "metadata": {
-        "id": "jdB1ZNJJTjg0"
+        "id": "HI3gpstTnPcU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 저장할 모델 생성.\n",
+        "model = Model(3, 1, 2., 1.5)\n",
+        "\n",
+        "# 모델 저장\n",
+        "torch.save(model, 'model.pth')\n",
+        "\n",
+        "# 저장된 model 로드.\n",
+        "n_model = torch.load('model.pth')\n",
+        "print(f'{type(n_model)=}, {n_model}')\n",
+        "\n",
+        "# 두 모델의 parameters비교.\n",
+        "for old, new in zip(model.parameters(), n_model.parameters()):\n",
+        "  if not torch.equal(old,new):\n",
+        "    print('model and n_model do not have parameters with the same values!')\n",
+        "    break\n",
+        "else:\n",
+        "  print('model and n_model have parameters with the same values!')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2jUY-nTIu7ty",
+        "outputId": "c394444f-b7ed-4221-fe25-1022a405089a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "type(n_model)=<class '__main__.Model'>, Model(\n",
+            "  (l0): Linear(in_features=3, out_features=1, bias=True)\n",
+            ")\n",
+            "model and n_model have parameters with the same values!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<hr>"
+      ],
+      "metadata": {
+        "id": "pyQMRD6q8NzF"
       }
     },
     {
