--- a/Lecture-AI_programming/week09.ipynb
+++ b/Lecture-AI_programming/week09.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPS7QYeGUTzDYuetFhPnwyg",
+      "authorship_tag": "ABX9TyOy78lNuoA+824OKlBEwKk/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,20 @@
       "metadata": {
         "id": "XNdqc3lr7vzj"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torch import nn\n",
+        "from torch.nn import init\n",
+        "from collections import OrderedDict"
+      ],
+      "metadata": {
+        "id": "pcfTQO7WyURv"
+      },
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -105,10 +119,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "from collections import OrderedDict\n",
-        "\n",
         "# 간단한 모델 정의\n",
         "class MyModel(nn.Module):\n",
         "    def __init__(self):\n",
@@ -322,20 +332,6 @@
       "metadata": {
         "id": "cKhuWei58CXt"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import torch\n",
-        "from torch import nn\n",
-        "from torch.nn import init\n",
-        "from collections import OrderedDict"
-      ],
-      "metadata": {
-        "id": "zDomW-5Qu91a"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -554,14 +550,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "PyTorch에서 nn.Parameter 또는 tensor 객체 두 개가 같은 값을 가지는지 확인하는 방법은 텐서의 모든 요소가 동일한지 확인하는 것임.\n",
-        "\n",
-        "\n",
-        "\n",
-        "이를 위해 제공되는 다음과 같은 함수 2개가 존재함.\n",
-        "\n",
-        "torch.equal : 두 텐서의 모든 요소가 동일한지 확인\n",
-        "torch.allclose : 지정된 허용 오차 내에서 두 텐서가 거의 동일한지 확인."
+        "PyTorch에서 `nn.Parameter` 또는 `tensor` 객체 두 개가 같은 값을 가지는지 확인하는 방법.\n",
+        "- `torch.equal` : 두 텐서의 모든 요소가 동일한지 확인\n",
+        "- `torch.allclose` : 지정된 허용 오차 내에서 두 텐서가 거의 동일한지 확인."
       ],
       "metadata": {
         "id": "RsiTGQ_cUwa1"
@@ -571,7 +562,7 @@
       "cell_type": "markdown",
       "source": [
         "## `torch.equal` 사용\n",
-        "https://ds31x.tistory.com/265"
+        "- 완벽히 같은 값을 가질 때만 `True` 반환."
       ],
       "metadata": {
         "id": "9v6CjNM5VRNg"
@@ -580,9 +571,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "\n",
         "# nn.Parameter 객체 생성\n",
         "param1 = nn.Parameter(torch.tensor([1.0, 2.0, 3.0]))\n",
         "param2 = nn.Parameter(torch.tensor([1.0, 2.0, 3.0]))\n",
@@ -597,9 +585,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2t8Iu9vTVWlM",
-        "outputId": "902939f1-82e2-4f7d-fd59-67ce4cb571d0"
+        "outputId": "21872842-e84b-4d32-b344-9f6c9e3cda4a"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,12 +603,155 @@
       "cell_type": "markdown",
       "source": [
         "## `torch.allclose` 사용\n",
-        "이 방법은 두 텐서가 지정된 허용 오차 내에서 거의 동일한지를 확인.\n",
-        "\n",
-        "이는 부동 소수점 연산의 미세한 차이로 인한 불일치를 허용할 수 있음 (권장)."
+        "- 두 텐서가 지정된 허용 오차 내에서 거의 동일한지 확인.\n",
+        "- 부동 소수점 연산의 미세한 차이로 인한 불일치를 허용할 수 있음"
       ],
       "metadata": {
         "id": "es8eLtyyVXRJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "param2 = nn.Parameter(torch.tensor([1.0, 2.00001, 3.0]))\n",
+        "\n",
+        "# 값 비교\n",
+        "print(torch.allclose(param1, param2))  # True, 기본 허용 오차 내\n",
+        "print(torch.allclose(param1, param3))  # False"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_QtfPWkSyby8",
+        "outputId": "1ba96363-ab9b-4117-dcb1-163b77d980c5"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 허용 오차 설정\n",
+        "`torch.allclose(tensor1, tensor2, rtol=1e-05, atol=1e-08)`\n",
+        "- 절대적(atol), 상대적(rtol) 허용 오차 설정 가능."
+      ],
+      "metadata": {
+        "id": "c5JSKfNUys44"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "param2 = nn.Parameter(torch.tensor([1.0, 2.0, 3.0001]))\n",
+        "\n",
+        "print(torch.allclose(param1, param2, atol=1e-4))  # True, 허용 오차 내\n",
+        "print(torch.allclose(param1, param2, atol=1e-5))  # False, 허용 오차 밖"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3_x7oMevzC6F",
+        "outputId": "36e7cad0-3cef-49ba-e2b6-0bda8c87452a"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 절대적 오차 (`atol`)\n",
+        "$\\mathrm{atol} = |a-b|$\n",
+        "- 두 값의 차이가 일정한 허용 오차인지 확인.\n",
+        "- 값 크기에 상관없이 일정\n",
+        "\n",
+        "$ a = 100$이고 $b = 100.1$이면\n",
+        "\n",
+        "$\\mathrm{atol} = |100-100.1| = 0.1$\n"
+      ],
+      "metadata": {
+        "id": "udxtWH8qzkrl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 상대적 오차 (`rtol`)\n",
+        "$\\mathrm{rtol} = \\cfrac{|a-b|}{|b|}$\n",
+        "- 두 값의 차이가 값에 크기에 비례한 허용 오차인지 확인.\n",
+        "- 값 크기에 비례함.\n",
+        "\n",
+        "$ a = 100$이고 $b = 100.1$이면\n",
+        "\n",
+        "$\\mathrm{rtol} = \\cfrac{|100-100.1|}{|100.1|} \\approx 0.001$\n"
+      ],
+      "metadata": {
+        "id": "JK4nCMHv2N9D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `torch.allclose`의 유사 기준\n",
+        "$|a_i - b_i| \\leq \\mathrm{atol}+|b_i| \\times \\mathrm{rtol}$"
+      ],
+      "metadata": {
+        "id": "Vs9s51wZ2-Rb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<hr>"
+      ],
+      "metadata": {
+        "id": "2TJIMhOX3pfh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `nn.Sequential`"
+      ],
+      "metadata": {
+        "id": "CTuQLpat3vyJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `nn.ModuleList`"
+      ],
+      "metadata": {
+        "id": "xbGHUmIx36CK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `nn.ModulDict`"
+      ],
+      "metadata": {
+        "id": "EkQMP2J63_QQ"
       }
     },
     {
