FEAT: add nn.Sequential, nn.ModuleList, nn.ModuleDict

--- a/Lecture-AI_programming/week09.ipynb
+++ b/Lecture-AI_programming/week09.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOy78lNuoA+824OKlBEwKk/",
+      "authorship_tag": "ABX9TyO/Wubpg/3xjAldrewS37kF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "pcfTQO7WyURv"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -587,7 +587,7 @@
         "id": "2t8Iu9vTVWlM",
         "outputId": "21872842-e84b-4d32-b344-9f6c9e3cda4a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,7 +626,7 @@
         "id": "_QtfPWkSyby8",
         "outputId": "1ba96363-ab9b-4117-dcb1-163b77d980c5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -664,7 +664,7 @@
         "id": "3_x7oMevzC6F",
         "outputId": "36e7cad0-3cef-49ba-e2b6-0bda8c87452a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,75 +730,174 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## `nn.Sequential`"
+        "## `nn.Sequential`\n",
+        "- 여러 모듈을 정의한 대로 순차적으로 실행할 수 있도록 함.\n",
+        "- 간단한 네트워크 구조 만들 때 유용.\n",
+        "- 직관적으로 정의 가능."
       ],
       "metadata": {
         "id": "CTuQLpat3vyJ"
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "model = nn.Sequential(\n",
+        "    nn.Linear(10, 20),\n",
+        "    nn.ReLU(),\n",
+        "    nn.Linear(20, 10)\n",
+        ")\n",
+        "\n",
+        "print(model)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zI5wOkRz7gZK",
+        "outputId": "7fa59bfd-7fc2-4ab1-8716-5750632efbf4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sequential(\n",
+            "  (0): Linear(in_features=10, out_features=20, bias=True)\n",
+            "  (1): ReLU()\n",
+            "  (2): Linear(in_features=20, out_features=10, bias=True)\n",
+            ")\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "## `nn.ModuleList`"
+        "## `nn.ModuleList`\n",
+        "- `nn.Module`을 list처럼 다룰 수 있음.\n",
+        "- list에 포함된 모듈을 올바르게 등록되고 관리됨.\n",
+        "- model parameter 자동 추적\n",
+        "- `to()`, `cuda()`, `cpu()`와 같은 method 사용 가능."
       ],
       "metadata": {
         "id": "xbGHUmIx36CK"
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "class MyModel(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(MyModel, self).__init__()\n",
+        "        self.layers = nn.ModuleList([\n",
+        "            nn.Linear(10, 20),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Linear(20, 10)\n",
+        "        ])\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        for layer in self.layers:\n",
+        "            x = layer(x)\n",
+        "        return x\n",
+        "\n",
+        "model = MyModel()\n",
+        "print(model)"
+      ],
+      "metadata": {
+        "id": "_EhJWx9u8IVv",
+        "outputId": "cff185b0-8cf9-4c52-d66b-e8e72519595c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MyModel(\n",
+            "  (layers): ModuleList(\n",
+            "    (0): Linear(in_features=10, out_features=20, bias=True)\n",
+            "    (1): ReLU()\n",
+            "    (2): Linear(in_features=20, out_features=10, bias=True)\n",
+            "  )\n",
+            ")\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "## `nn.ModulDict`"
+        "## `nn.ModuleDict`\n",
+        "- `nn.Module`을 dictionary처럼 다룰 수 있음.\n",
+        "- list에 포함된 모듈을 올바르게 등록되고 관리됨.\n",
+        "- model parameter 자동 추적\n",
+        "- `to()`, `cuda()`, `cpu()`와 같은 method 사용 가능.\n",
+        "- 이름을 지정하면 디버깅시 확인이 매우 편함."
       ],
       "metadata": {
         "id": "EkQMP2J63_QQ"
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "https://ds31x.tistory.com/266"
+        "class MyModel(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(MyModel, self).__init__()\n",
+        "        self.layers = nn.ModuleDict({\n",
+        "            'fc1': nn.Linear(10, 20),\n",
+        "            'relu': nn.ReLU(),\n",
+        "            'fc2': nn.Linear(20, 10)\n",
+        "        })\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = self.layers['fc1'](x)\n",
+        "        x = self.layers['relu'](x)\n",
+        "        x = self.layers['fc2'](x)\n",
+        "        return x\n",
+        "\n",
+        "model = MyModel()\n",
+        "print(model)"
       ],
       "metadata": {
-        "id": "A6lyfzuXWRdb"
-      }
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZK35rvCX-Ibi",
+        "outputId": "5f18a2ae-d7cf-4c96-ad4a-93f91a97a34d"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MyModel(\n",
+            "  (layers): ModuleDict(\n",
+            "    (fc1): Linear(in_features=10, out_features=20, bias=True)\n",
+            "    (relu): ReLU()\n",
+            "    (fc2): Linear(in_features=20, out_features=10, bias=True)\n",
+            "  )\n",
+            ")\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "이름을 지정하면 디버깅시 확인이 매우 편함."
+        "## 일반 list나 dict 사용\n",
+        "- 일반 list / dict를 사용하면 parameter로 선언이 안 되기 때문에 학습 자체가 불가.\n",
+        "- parameter 자동 추적 불가.\n",
+        "- 포함된 모든 모듈이 자동으로 cpu/gpu로 이동하지 않음."
       ],
       "metadata": {
-        "id": "dYUaG2anXmG0"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "일반 list / dict를 사용하면 선언이 되지 않고 parameter로 선언이 안 되기 때문에 하습 자체가 불가."
-      ],
-      "metadata": {
-        "id": "5ppBIvouZVfm"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "loss가 기존보다 줄었다면 모델 저장 기능 추가. -> checkpoint.\n",
-        "epoch마다 저장하는 것은 파일명에 에포크수가 포함되어 있어야 함.\n",
-        "+날짜 및 시간"
-      ],
-      "metadata": {
-        "id": "0QherU59a4Ir"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "optimizer의 상태도 그대로 저장해야 함."
-      ],
-      "metadata": {
-        "id": "sjbHPBKYbvxJ"
+        "id": "Ioi_7VEM_kXo"
       }
     }
   ]
