--- a/25-activation_functions.ipynb
+++ b/25-activation_functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMArSzQbtkaXWxLnsD6Ex7f",
+      "authorship_tag": "ABX9TyO3e4JFXxAJXGRijtIEjaTe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,21 +27,17 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "hdfLWhhfHkNG"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nXfZupICExrn"
+        "id": "5sht2PjhCNAA"
       },
       "source": [
-        "# Week10"
+        "# Activation Functions\n",
+        "classification task를 위해 주어진 input에 대한 output을 0과 1 사이의 확률로 변환하는 함수.\n",
+        "- 비선형성 부여 (없으면 linear regression과 같음)\n",
+        "- multiple layers를 사용하는 이점을 얻기 위해 function은 non-linear해야 함.\n",
+        "- Data 사이의 복잡한 관계를 학습할 수 있음\n",
+        "- 최종 출력으로 사용: Sigmoid, Softmax, LogSoftmax"
       ]
     },
     {
@@ -56,15 +52,6 @@
         "import torch.nn.functional as F\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5sht2PjhCNAA"
-      },
-      "source": [
-        "# Activation Functions"
       ]
     },
     {
@@ -101,7 +88,7 @@
         "id": "7qoC0qvLzvpI"
       },
       "source": [
-        "## Binary Classification"
+        "# Binary Classification"
       ]
     },
     {
@@ -112,6 +99,24 @@
       "source": [
         "## Sigmoid"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$\\sigma(x) = \\cfrac{1}{1+e^{-x}}$\n",
+        "\n",
+        "- [0, 1] 범위에 존재\n",
+        "- gradient가 모두 positive.\n",
+        "\n",
+        "### Problems\n",
+        "- Saturated neuron이 gradient를 죽임\n",
+        "- Output이 zero-centered가 아님\n",
+        "- `exp()`가 계산 복잡도를 높임\n",
+        "- zig-zag path로 학습함."
+      ],
+      "metadata": {
+        "id": "-lJOKX19JyAB"
+      }
     },
     {
       "cell_type": "code",
@@ -180,7 +185,11 @@
         "id": "bTdm9wjhzzgB"
       },
       "source": [
-        "## tanh - hyperbolic tangent"
+        "## tanh - hyperbolic tangent\n",
+        "$\\mathrm{tanh}(x) = \\cfrac{e^x-e^{-x}}{e^x+e^{-x}}$\n",
+        "- [-1, 1] 범위\n",
+        "- zero-centered\n",
+        "- 여전히 kill gradient"
       ]
     },
     {
@@ -249,7 +258,11 @@
         "id": "Tz0vM6r11NlX"
       },
       "source": [
-        "## ReLU"
+        "## ReLU\n",
+        "Rectified Linear Unit<br>\n",
+        "$\\mathrm{max}(0, x)$\n",
+        "- (+) 영역에서 not saturate\n",
+        "- `exp()`가 없기 때문에 계산 빠름\n"
       ]
     },
     {
@@ -318,7 +331,11 @@
         "id": "Yj2xKly52g8q"
       },
       "source": [
-        "## Leaky ReLU"
+        "## Leaky ReLU\n",
+        "$\\mathrm{max}(0.01x, x)$\n",
+        "- not saturate\n",
+        "- `exp()`가 없기 때문에 계산 빠름\n",
+        "- kill gradient 없음\n"
       ]
     },
     {
@@ -397,7 +414,11 @@
         "id": "SKzluXRhDzYt"
       },
       "source": [
-        "## Softmax"
+        "## Softmax\n",
+        "input에 대한 probability 값들을 가지는 vector를 출력.\n",
+        "- vector의 모든 요소의 값을 더하면 1.\n",
+        "- 입력 벡털르 확률 분포로 변환.\n",
+        "- multi-class classification을 위한 모델의 출력층으로 사용."
       ]
     },
     {
@@ -457,7 +478,12 @@
         "id": "rUnlTkFvSRNL"
       },
       "source": [
-        "## LogSoftmax"
+        "## LogSoftmax\n",
+        "softmax의 출력에 log를 적용한 함수.\n",
+        "- softmax로 얻어진 확률분포에 해당하는 vector를 일종의 likelihood로 생각하고,\n",
+        "- 모델이 정답인 class의 likelihood를 극대화하도록 최적화할 때 사용되는 loss 함수인\n",
+        "- negative log likelihood (NLL) loss 와 함께 사용되게 하기 위해 아예 softmax결과에 log를 취한 결과가 나오도록 한 함수임.\n",
+        "- 거의 대부분의 경우 손실함수 NLLLoss와 함께 사용."
       ]
     },
     {
