FEAT: add descriptions

--- a/26-loss_functions.ipynb
+++ b/26-loss_functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+XggKEQCxxltzYZeYHA2t",
+      "authorship_tag": "ABX9TyPN2T5i/S4t7tuGNB/W/M2L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,8 +32,40 @@
         "id": "qNkJ9xK0SZq4"
       },
       "source": [
-        "# Loss Functions"
+        "# Loss Functions\n",
+        "인공지능 모델이 data와 얼마나 잘 맞는지 측정하는 function.\n",
+        "- loss 값은 function에 따라 달라질 수 있음.\n",
+        "- 인공지능 학습은 loss를 최소화하는 방향으로 진행.\n",
+        "\n",
+        "Binary Classification\n",
+        "- BCELoss or BCEWithLogitsLoss\n",
+        "\n",
+        "Multiple-class Classification:\n",
+        "- CrossEntropyLoss 사용\n",
+        "- LogSoftmax와 NLLLoss의 조합\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F"
+      ],
+      "metadata": {
+        "id": "UL_2NAbcGEIT"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Binary classification"
+      ],
+      "metadata": {
+        "id": "KuQ83D48JrCR"
+      }
     },
     {
       "cell_type": "markdown",
@@ -41,7 +73,11 @@
         "id": "daYlkZr1SfMF"
       },
       "source": [
-        "## BCELoss"
+        "## BCELoss\n",
+        "binary classification에 사용.\n",
+        "- model의 출력이 0과 1 사이 값이어야 하기 때문에 출력으로 sigmoid 사용.\n",
+        "- pred: sigmoid\n",
+        "- label: 0과 1 사이의 실제 라벨값"
       ]
     },
     {
@@ -52,8 +88,6 @@
       },
       "outputs": [],
       "source": [
-        "import torch.nn as nn\n",
-        "\n",
         "# 예측값과 실제값\n",
         "outputs = torch.tensor([0.7, 0.2, 0.9], requires_grad=True).float()\n",
         "targets = torch.tensor([1.0, 0.0, 1.0]).float()\n",
@@ -75,7 +109,11 @@
         "id": "h0321B4TSpAS"
       },
       "source": [
-        "## BCEWithLogitsLoss"
+        "## BCEWithLogitsLoss\n",
+        "- BCELoss의 variation.\n",
+        "- 내부적으로 sigmoid를 결합시켰으므로 입력으로 logit score를 받을 수 있음.\n",
+        "- pred: sigmoid의 입력값인 **logit score**\n",
+        "- label: 0과 1 사이의 실제 라벨 값"
       ]
     },
     {
@@ -86,9 +124,6 @@
       },
       "outputs": [],
       "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "\n",
         "# 원시 출력값 (시그모이드 활성화 적용 전 raw score)\n",
         "raw_outputs = torch.tensor([0.5, -1.0, 2.0], requires_grad=True)\n",
         "targets = torch.tensor([1.0, 0.0, 1.0])\n",
@@ -103,11 +138,23 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Multi-class classification"
+      ],
+      "metadata": {
+        "id": "5DVFVHylJ7jj"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "XaI-waGVSsiF"
       },
       "source": [
-        "## CrossEntropyLoss"
+        "## CrossEntropyLoss\n",
+        "내부적으로 softmax 함수 적용.\n",
+        "- input: logit score vector\n",
+        "- output: class index. `dtype=long(int64)`\n"
       ]
     },
     {
@@ -118,9 +165,6 @@
       },
       "outputs": [],
       "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "\n",
         "# 원시 출력값 (softmax 활성화 적용 전)\n",
         "raw_outputs = torch.tensor(\n",
         "\t[[1.0, 2.0, 3.0],\n",
@@ -144,7 +188,10 @@
       },
       "source": [
         "## NLLLoss\n",
-        "Negative Log Likelihood Loss"
+        "Negative Log Likelihood Loss\n",
+        "- 주로 LogSoftmax와 함께 사용됨.\n",
+        "- input: log 확률\n",
+        "- output: class index"
       ]
     },
     {
@@ -155,9 +202,6 @@
       },
       "outputs": [],
       "source": [
-        "import torch\n",
-        "import torch.nn\n",
-        "\n",
         "# 모델 출력\n",
         "logits = torch.tensor(\n",
         "\t[[0.1, 0.2, 0.7], # max idx 2\n",
@@ -175,51 +219,6 @@
         "criterion = nn.NLLLoss()\n",
         "loss = criterion(log_softmax, targets)\n",
         "print(f'NLLLoss with LogSoftmax: {loss.item():.2f}')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gvSDre8NTBPF"
-      },
-      "source": [
-        "앞서 소개한 loss function과 activation function은 PyTorch를 사용하는 딥러닝 모델을 구축하고 효과적으로 훈련하는 데 필수적임.\n",
-        "\n",
-        "각 함수의 선택과 사용은 model의 특성과 task의 유형에 따라 달라질 수 있음.\n",
-        "\n",
-        "Binary Classification\n",
-        "- BCELoss or BCEWithLogitsLoss\n",
-        "\n",
-        "Multiple-class Classification:\n",
-        "- CrossEntropyLoss 사용\n",
-        "- LogSoftmax와 NLLLoss의 조합\n",
-        "\n",
-        "Activation Function:\n",
-        "- Sigmoid는 binary classification(이진 분류)에서\n",
-        "- Softmax는 mutiple-class classification(다중 클래스)의 확률을 직접 계산하고,\n",
-        "- LogSoftmax는 확률의 로그 값을 계산하여 보다 수치적으로 stable(안정적)인 결과를 제공."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hyv0LvV3WYA8"
-      },
-      "source": [
-        "<hr>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "IcTQP7Y1WY8P"
-      },
-      "outputs": [],
-      "source": [
-        "from sklearn.datasets import load_breast_cancer\n",
-        "\n",
-        "cancer = load_breast_cancer()"
       ]
     }
   ]
