FEAT: add description for MultiLabelSotfMarginLoss

--- a/Lecture-AI_programming/week11.ipynb
+++ b/Lecture-AI_programming/week11.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+qq6/ebb9IPnLlrxwPZNf",
+      "authorship_tag": "ABX9TyN7y7vEFfxjQM7kh9uWRdvj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "X-NaNiMiAzLN"
       },
@@ -68,12 +68,43 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### `MultiLabelSoftMarginLoss`\n",
-        "Multi-label Classification을 위한 loss function.\n",
-        "- 하나의 sample이 여러 개의 class에 동시에 속할 수 있는 classification."
+        "## MultiLabelSoftMarginLoss\n",
+        "### Multi-label Classification을 위한 loss function.\n",
+        "- 하나의 sample이 여러 개의 class에 동시에 속할 수 있는 classification.\n",
+        "- 각 클래스 레이블을 각각 독립적인 binary classification으로 취급.\n",
+        "- input: model의 logit vector output(클래스 각각의 예측값)\n",
+        "- 내부적으로 logistic function을 적용하여 이를 [0, 1] 범위의 확률로 변환.\n",
+        "- 이 변환된 확률과 실제 레이블의 값을 사용해 binary cross entropy loss 계산해 합침."
       ],
       "metadata": {
         "id": "NmZx-0XwA40_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Formula\n",
+        "$$L(y, \\hat y)\n",
+        " = -\\cfrac1C \\displaystyle \\sum^C_{i=1} [y_i \\cdot \\log(\\sigma(\\hat y_i)) + (1-y_i)\\cdot \\log(1-\\sigma(\\hat y_i))]$$\n",
+        "\n",
+        "- 𝜎: logistic function (~sigma)\n",
+        "- 𝑦̂_𝑖: predicted logit score.\n",
+        "- 𝑦_𝑖: label or target."
+      ],
+      "metadata": {
+        "id": "H5MHuFScUKcd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Class weight for imbalanced class\n",
+        "각 클래스에 가중치를 부여할 수 있음\n",
+        "- 특정 클래스가 다른 클래스보다 중요\n",
+        "- 데이터셋에서 클래스 불균형을 해소할 필요가 있을 때 유용"
+      ],
+      "metadata": {
+        "id": "opT-r9uFUq4h"
       }
     },
     {
@@ -108,30 +139,17 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ZrGX08WwDa-C"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "stable하지 않은 경우가 있음."
+        "## BCELoss + Sigmoid와의 차이점\n",
+        "| | MultiLabelSoftMarginLoss|BCELoss|\n",
+        "|---|---|---|\n",
+        "|sigmoid|내부|외부에서 필요|\n",
+        "|classification|multi-label|binary|\n",
+        "|input|logit|probability|\n"
       ],
       "metadata": {
-        "id": "QJLbioA-Dbd5"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "<hr>"
-      ],
-      "metadata": {
-        "id": "ugsPT2QQCguT"
+        "id": "pOrHX19oVakz"
       }
     },
     {
@@ -766,7 +784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -835,7 +853,7 @@
         "id": "TWQMre-us0bD",
         "outputId": "4e87eea8-dde3-4279-b368-8b48b4b8d4ca"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -868,7 +886,7 @@
         "id": "dhnsMaE0Dl3s",
         "outputId": "af45aa04-e22e-4a11-c5c4-f054245d245c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1194,7 +1212,7 @@
         "id": "HtdJ8b29ETZb",
         "outputId": "dbb89d5a-6036-4f9d-f313-cf047eb46b62"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1548,7 +1566,7 @@
         "id": "VQ3w6RP0EbIC",
         "outputId": "cba74102-64cc-45d3-dd1a-2c942a7dec38"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1582,7 +1600,7 @@
         "id": "RJ6EnxywFQ4M",
         "outputId": "da47e627-bc3b-4fb8-9131-92a87aaaff6e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1612,7 +1630,7 @@
         "id": "nR5npuudGSV6",
         "outputId": "52c13436-c590-406c-f695-aea13aed980a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1651,7 +1669,7 @@
         "id": "mAw0HqXoRZIU",
         "outputId": "46663ef5-8cdc-47ee-c6fa-5cba10df39d4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1675,7 +1693,7 @@
         "id": "NyrIMk_ORpoO",
         "outputId": "6c9829ac-c3e4-4bee-c7d4-e38ed0803a8f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1714,7 +1732,7 @@
         "id": "4aVmXarZRtZ_",
         "outputId": "8bdc06f6-c3f7-4071-f9cf-133dda7503ee"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1743,7 +1761,7 @@
         "id": "ZNQlpMeBSfzt",
         "outputId": "28a48fb0-04f1-4043-9a4d-2185fb70d872"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1778,7 +1796,7 @@
         "id": "BGzu5hfGTDNU",
         "outputId": "27f034cb-a794-4bbd-8975-390f24c144b4"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1945,13 +1963,12 @@
         "    if epoch == n_epoch:\n",
         "      print(f'{epoch} Epoch / loss {loss_train.item():.4f} / val_loss {loss_val.item():.4f}')\n",
         "\n",
-        "  return model,log_hist\n",
-        ""
+        "  return model,log_hist\n"
       ],
       "metadata": {
         "id": "8UHr1CLAVzO3"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
