FEAT: add description for MultiLabelSoftMarginLoss

--- a/26-loss_functions.ipynb
+++ b/26-loss_functions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPN2T5i/S4t7tuGNB/W/M2L",
+      "authorship_tag": "ABX9TyM0TcfSW8zCPSGKXvuwTORB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,8 +41,12 @@
         "- BCELoss or BCEWithLogitsLoss\n",
         "\n",
         "Multiple-class Classification:\n",
-        "- CrossEntropyLoss 사용\n",
-        "- LogSoftmax와 NLLLoss의 조합\n"
+        "- CrossEntropyLoss\n",
+        "- LogSoftmax + NLLLoss\n",
+        "\n",
+        "Multi-label Classification:\n",
+        "- sigmoid + BCELoss\n",
+        "- MultiLablelSoftMarginLoss"
       ]
     },
     {
@@ -55,7 +59,7 @@
       "metadata": {
         "id": "UL_2NAbcGEIT"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -82,11 +86,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "35ut6qv2Se40"
+        "id": "35ut6qv2Se40",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a723619f-fa9c-4236-9d14-3c5d7ab93f13"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BCELoss: 0.514159619808197\n"
+          ]
+        }
+      ],
       "source": [
         "# 예측값과 실제값\n",
         "outputs = torch.tensor([0.7, 0.2, 0.9], requires_grad=True).float()\n",
@@ -118,11 +134,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "3ra2a870SZdb"
+        "id": "3ra2a870SZdb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7936d8dc-f9bb-48f1-dc25-2e483022d2b9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BCEWithLogitsLoss: 0.3048\n"
+          ]
+        }
+      ],
       "source": [
         "# 원시 출력값 (시그모이드 활성화 적용 전 raw score)\n",
         "raw_outputs = torch.tensor([0.5, -1.0, 2.0], requires_grad=True)\n",
@@ -159,11 +187,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "OsY8asbLSoOW"
+        "id": "OsY8asbLSoOW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "02911d8c-1e65-4cab-ac3b-cb3f247e3fc4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.int64\n",
+            "CrossEntropyLoss: 0.74\n"
+          ]
+        }
+      ],
       "source": [
         "# 원시 출력값 (softmax 활성화 적용 전)\n",
         "raw_outputs = torch.tensor(\n",
@@ -196,11 +237,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "Ugm5BaicS81v"
+        "id": "Ugm5BaicS81v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "26dd4e01-9771-4e86-b6b0-513c4f37d49e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "NLLLoss with LogSoftmax: 0.80\n"
+          ]
+        }
+      ],
       "source": [
         "# 모델 출력\n",
         "logits = torch.tensor(\n",
@@ -220,6 +273,102 @@
         "loss = criterion(log_softmax, targets)\n",
         "print(f'NLLLoss with LogSoftmax: {loss.item():.2f}')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Multiple-label Classification"
+      ],
+      "metadata": {
+        "id": "BEY06cQDoSGw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## MultiLabelSoftMarginLoss\n",
+        "### Multi-label Classification을 위한 loss function.\n",
+        "- 하나의 sample이 여러 개의 class에 동시에 속할 수 있는 classification.\n",
+        "- 각 클래스 레이블을 각각 독립적인 binary classification으로 취급.\n",
+        "- input: model의 logit vector output(클래스 각각의 예측값)\n",
+        "- 내부적으로 logistic function을 적용하여 이를 [0, 1] 범위의 확률로 변환.\n",
+        "- 이 변환된 확률과 실제 레이블의 값을 사용해 binary cross entropy loss 계산해 합침."
+      ],
+      "metadata": {
+        "id": "NmZx-0XwA40_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Formula\n",
+        "$$L(y, \\hat y)\n",
+        " = -\\cfrac1C \\displaystyle \\sum^C_{i=1} [y_i \\cdot \\log(\\sigma(\\hat y_i)) + (1-y_i)\\cdot \\log(1-\\sigma(\\hat y_i))]$$\n",
+        "\n",
+        "- 𝜎: logistic function (~sigma)\n",
+        "- 𝑦̂_𝑖: predicted logit score.\n",
+        "- 𝑦_𝑖: label or target."
+      ],
+      "metadata": {
+        "id": "H5MHuFScUKcd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Class weight for imbalanced class\n",
+        "각 클래스에 가중치를 부여할 수 있음\n",
+        "- 특정 클래스가 다른 클래스보다 중요\n",
+        "- 데이터셋에서 클래스 불균형을 해소할 필요가 있을 때 유용"
+      ],
+      "metadata": {
+        "id": "opT-r9uFUq4h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logits = torch.tensor([[0.5, -1.0, 3.0], [1.5, -2.0, 0.0]], requires_grad=True)\n",
+        "labels = torch.tensor([[1, 0, 1], [0, 1, 0]], dtype=torch.float)\n",
+        "\n",
+        "weights = torch.tensor([0.5, 2.0, 1.5], dtype=torch.float) # class 별 중요도\n",
+        "\n",
+        "loss_func = nn.MultiLabelSoftMarginLoss(weight=weights)\n",
+        "\n",
+        "loss = loss_func(logits, labels)\n",
+        "print(\"Loss:\", loss.item())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OtXT8wgKB9WZ",
+        "outputId": "e5db3b52-c8c6-4708-ef56-01006670bf76"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Loss: 1.1801210641860962\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Sigmoid+BCELoss와의 차이점\n",
+        "| | MultiLabelSoftMarginLoss|BCELoss|\n",
+        "|---|---|---|\n",
+        "|sigmoid|내부|외부에서 필요|\n",
+        "|classification|multi-label|binary|\n",
+        "|input|logit|probability|\n"
+      ],
+      "metadata": {
+        "id": "pOrHX19oVakz"
+      }
     }
   ]
 }
